feat: add websocket, rest endpoint for notification