@@ -1,6 +1,8 @@
 package com.odc.notificationservice.service;
 
+import com.odc.common.dto.ApiResponse;
 import com.odc.common.exception.ResourceNotFoundException;
+import com.odc.notificationservice.dto.response.GetNotificationResponse;
 import com.odc.notificationservice.entity.NotificationRecipient;
 import com.odc.notificationservice.repository.NotificationRecipientRepository;
 import lombok.RequiredArgsConstructor;
@@ -9,7 +11,6 @@ import org.springframework.stereotype.Service;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,29 +18,55 @@ public class NotificationServiceImpl implements NotificationService {
     private final NotificationRecipientRepository notificationRecipientRepository;
 
     @Override
-    public void markAsRead(UUID userId, UUID notificationRecipientId) {
-        NotificationRecipient notificationRecipient = notificationRecipientRepository
-                .findByIdAndUserIdAndReadStatus(notificationRecipientId, userId, false).map(
-                noti -> {
-                    noti.setReadStatus(true);
-                    noti.setReadAt(Instant.now());
-                    return noti;
-                }
-        )
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy notification."));
+    public ApiResponse<List<GetNotificationResponse>> getNotifications(UUID userId, Boolean readStatus) {
+        List<GetNotificationResponse> data = notificationRecipientRepository
+                .findAllNotificationsByUserIdAndReadStatus(userId, readStatus)
+                .stream()
+                .map(this::toGetNotificationResponse)
+                .toList();
 
-        notificationRecipientRepository.save(notificationRecipient);
+        return ApiResponse.success(data);
     }
 
     @Override
-    public void markAllAsRead(UUID userId) {
-        List<NotificationRecipient> notificationRecipients = notificationRecipientRepository
-                .findAllByUserIdAndReadStatus(userId, false).stream()
-                .peek(notificationRecipient -> {
+    public ApiResponse<GetNotificationResponse> markAsRead(UUID notificationRecipientId) {
+        NotificationRecipient recipient = notificationRecipientRepository
+                .findByIdAndReadStatus(notificationRecipientId, false)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy thông báo."));
+
+        recipient.setReadStatus(true);
+        recipient.setReadAt(Instant.now());
+        notificationRecipientRepository.save(recipient);
+
+        return ApiResponse.success("Thao tác thành công.", toGetNotificationResponse(recipient));
+    }
+
+    @Override
+    public ApiResponse<List<GetNotificationResponse>> markAllAsRead(UUID userId) {
+        return ApiResponse.success("Thao tác thành công.", notificationRecipientRepository
+                .findAllByUserIdAndReadStatus(userId, false)
+                .stream().map(notificationRecipient -> {
                     notificationRecipient.setReadStatus(true);
                     notificationRecipient.setReadAt(Instant.now());
-                }).collect(Collectors.toList());
+                    notificationRecipientRepository.save(notificationRecipient);
+                    return toGetNotificationResponse(notificationRecipient);
+                })
+                .toList());
+    }
 
-        notificationRecipientRepository.saveAll(notificationRecipients);
+    private GetNotificationResponse toGetNotificationResponse(NotificationRecipient notificationRecipient) {
+        return GetNotificationResponse
+                .builder()
+                .notificationRecipientId(notificationRecipient.getId())
+                .type(notificationRecipient.getNotification().getType())
+                .title(notificationRecipient.getNotification().getTitle())
+                .content(notificationRecipient.getNotification().getContent())
+                .data(notificationRecipient.getNotification().getData())
+                .category(notificationRecipient.getNotification().getCategory())
+                .priority(notificationRecipient.getNotification().getPriority())
+                .deepLink(notificationRecipient.getNotification().getDeepLink())
+                .sentAt(notificationRecipient.getNotification().getSentAt())
+                .readStatus(notificationRecipient.getReadStatus())
+                .build();
     }
 }
